--- a/front-end/src/Pages/Welcome/Welcome.css
+++ b/front-end/src/Pages/Welcome/Welcome.css
@@ -1,9 +1,42 @@
 .welcome {
-    background-color: rgb(174, 187, 187);
-    overflow: auto;
-    height: 100vh;
-    background-image: url('./kettle.jpg');
-    background-repeat: round;
-
+  background-color: rgb(174, 187, 187);
+  overflow: auto;
+  height: 100vh;
+  /* background-image: url('./kettle.jpg'); */
+  background-repeat: round;
 }
 
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.viewport-header {
+  position: relative;
+  height: 19vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.welcome h1 {
+  font-size: 150px;
+  font: 900;
+  /* border: 1px solid; */
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 12px;
+  background-color: rgba(245, 247, 248, 0.096);
+}
+
+/* .welcome h1 {
+    color: white;
+    font-size: 150px;
+    font: 900;
+    border: 2px solid; 
+    font-style: italic; 
+  } */
